manifests/hello-world/ingress/nginx/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.p.cloudacode.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-world-2
            port:
              number: 80
